# SkyWidget

./: .gitignore  NEXT_STEPS.md  README.md  SETUP_GUIDE.md  index.html  package.json  setup.ps1  svelte.config.js  vite.config.js
.claude/: settings.local.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src-tauri/src/alerts/: engine.rs  mod.rs  notifier.rs  rules.rs
src-tauri/src/monitors/: cpu.rs  disk.rs  fan.rs  gpu.rs  memory.rs  mod.rs  power.rs  temperature.rs
src-tauri/src/network/: api.rs  discovery.rs  mod.rs  node.rs
src-tauri/src/storage/: alerts_store.rs  metrics.rs  mod.rs
src/lib/components/: AddAlertRulePanel.svelte  AlertHistoryPanel.svelte  AlertPanel.svelte  CpuMonitor.svelte  DiskMonitor.svelte  DynamicLayout.svelte  FanMonitor.svelte  GpuMonitor.svelte  MemoryMonitor.svelte  MetricsChart.svelte  NetworkPanel.svelte  SettingsPanel.svelte  TemperatureMonitor.svelte
src/lib/stores/: config.svelte.ts
src/lib/types/: config.ts
src/lib/utils/: format.ts  tauri.ts
