[package]
name = "skywidget"
version = "0.1.0"
description = "跨平台硬件监控桌面磁贴应用"
authors = ["Geoffrey Wang"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 硬件监控核心依赖
sysinfo = "0.32"
chrono = "0.4"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 服务器与 WebSocket
warp = "0.3"

# 本地网络设备发现 (mDNS/DNS-SD)
mdns-sd = "0.11"

# 轻量级数据存储（告警历史、时序数据）
sled = "0.34"

# UUID 生成（节点 ID）
uuid = { version = "1", features = ["v4", "serde"] }

# 本地桌面通知
notify-rust = "4"

# 日志
log = "0.4"
env_logger = "0.11"

# 跨平台本地 IP 获取
local-ip-address = "0.6"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# GPU 监控
nvml-wrapper = { version = "0.10", optional = true }

[features]
# 默认包含自定义协议和 NVIDIA GPU 支持
default = ["custom-protocol", "nvidia"]
# 自定义协议功能
custom-protocol = ["tauri/custom-protocol"]
# NVIDIA GPU 监控支持（可选）
nvidia = ["nvml-wrapper"]

[profile.release]
# 发布版本优化
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # 优化大小
strip = true     # 移除调试符号
